Added photo API endpoints
